[gd_scene load_steps=17 format=2]

[ext_resource path="res://game_screen/sun_and_planets/assets/planet2.png" type="Texture" id=1]
[ext_resource path="res://game_screen/sun_and_planets/assets/planet5.png" type="Texture" id=2]
[ext_resource path="res://game_screen/sun_and_planets/assets/planet14.png" type="Texture" id=3]
[ext_resource path="res://game_screen/sun_and_planets/assets/sun_shiny.png" type="Texture" id=4]
[ext_resource path="res://game_screen/sun_and_planets/PlanetPath.gd" type="Script" id=7]
[ext_resource path="res://game_screen/sun_and_planets/SunAndPlanets.gd" type="Script" id=8]
[ext_resource path="res://game_screen/sun_and_planets/Planet.gd" type="Script" id=9]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( -1.83705, -163.3, 1.83705, 163.3, 1564, 141.242, 179.605, -123.896, -179.605, 123.896, 1225.23, 646.236, 303.252, -3.65095, -303.252, 3.65095, 301.962, 869.485, 130.417, 126.704, -130.417, -126.704, -350.777, 684.076, -12.3618, 193.86, 12.3618, -193.86, -595.583, 101.977, -139.354, 83.6925, 139.354, -83.6925, -172.728, -432.633, -261.464, -2.51183, 261.464, 2.51183, 458.536, -550.429, -125.439, -102.632, 125.439, 102.632, 1310.76, -303.105, -22.807, -159.649, 22.807, 159.649, 1573.06, 138.222 )
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 199.668
height = 250.593

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( -0.0641734, 24.1904, 0.0641734, -24.1904, -211.869, -11.8806, -56.6207, 66.3739, 56.6207, -66.3739, -156.874, -225.418, -110.915, 15.8328, 110.915, -15.8328, -17.5805, -297.421, -54.3214, -40.4617, 54.3214, 40.4617, 147.587, -248.801, -3.80178, -86.693, 3.80178, 86.693, 217.5, -6.70984, 40.4296, -42.2262, -40.4296, 42.2262, 170.547, 214.913, 86.693, -3.80178, -86.693, 3.80178, 5.01086, 305.387, 32.1523, 38.387, -32.1523, -38.387, -170.102, 201.913, -2.11747, 38.2961, 2.11747, -38.2961, -211.874, -9.86487 )
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( -215.405, -150.173, 215.405, 150.173, 1305.33, -358.833, 0.548615, -273.498, -0.548615, 273.498, 1802.4, 307.549, 352.072, -150.019, -352.072, 150.019, 1255.2, 1149.15, 250.21, 139.841, -250.21, -139.841, 10.4039, 1072.35, 50.802, 423.333, -50.802, -423.333, -677.803, 318.841, -403.175, 85.6746, 403.175, -85.6746, 80.804, -441.251, -152.219, 0, 152.219, 0, 688.842, -518.663, -115.2, -67.2, 115.2, 67.2, 1305.33, -362.639 )
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 200.0
height = 250.0

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( -90.9399, -53.5619, 90.9399, 53.5619, 124.266, -181.996, -14.9657, -18.2617, 14.9657, 18.2617, 282.017, -51.329, -2.85581, -22.4722, 2.85581, 22.4722, 314.399, 52.8919, 18.8204, -29.6039, -18.8204, 29.6039, 267.583, 190.075, 87.0581, -21.7199, -87.0581, 21.7199, 128.543, 263.109, 84.7452, 47.3094, -84.7452, -47.3094, -102.052, 188.52, 0, 0, 0, 0, -272.197, 62.5042, -63.4884, 90.1299, 63.4884, -90.1299, -287.15, -154.66, -37.1033, 9.45919, 37.1033, -9.45919, -156.804, -258.891, -77.3049, -12.5177, 77.3049, 12.5177, -58.3934, -258.575, 0, 0, 0, 0, 127.214, -180.32 )
}

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array( -46.3019, -85.8999, 46.3019, 85.8999, 1249.84, -661.315, 13.7949, -247.607, -13.7949, 247.607, 1339.74, -19.0354, 0, 0, 0, 0, 1134.48, 619.561, 383.016, 15.1191, -383.016, -15.1191, 267.179, 1292.85, 20.1587, 267.103, -20.1587, -267.103, -320.425, 311.56, -148.82, 213.202, 148.82, -213.202, -85.6931, -629.123, -179.685, -10.1708, 179.685, 10.1708, 681.673, -1097.14, -65.808, -150.876, 65.808, 150.876, 1249.84, -661.315 )
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 200.0
height = 250.0

[sub_resource type="Curve2D" id=9]
_data = {
"points": PoolVector2Array( 46.5218, 47.722, -46.5218, -47.722, -152.506, 160.764, 7.20645, 90.9876, -7.20645, -90.9876, -289.897, -51.8281, -61.1429, 64.2886, 61.1429, -64.2886, -238.124, -221.083, -72.8186, -0.797989, 72.8186, 0.797989, -70.0106, -282.579, -74.4892, -65.6569, 74.4892, 65.6569, 147.382, -163.791, 4.8651, -77.2944, -4.8651, 77.2944, 293.005, 64.4438, 58.4314, -61.3048, -58.4314, 61.3048, 237.572, 224.252, 94.2439, 1.2002, -94.2439, -1.2002, 65.0905, 283.819, 0, 0, 0, 0, -153.521, 161.882 )
}

[node name="SunAndPlanets" type="Node2D"]
pause_mode = 2
script = ExtResource( 8 )

[node name="Sun" type="Sprite" parent="."]
scale = Vector2( 24, 24 )
texture = ExtResource( 4 )

[node name="PlanetPath1" type="Path2D" parent="."]
position = Vector2( -800, -700 )
scale = Vector2( 5, 5 )
curve = SubResource( 1 )
script = ExtResource( 7 )

[node name="Planet" type="PathFollow2D" parent="PlanetPath1"]
position = Vector2( 1564, 141.242 )
rotation = 1.56814
script = ExtResource( 9 )

[node name="PlanetImg" type="Sprite" parent="PlanetPath1/Planet"]
rotation = -1.91986
texture = ExtResource( 1 )

[node name="PlanetSensor" type="Area2D" parent="PlanetPath1/Planet"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlanetPath1/Planet/PlanetSensor"]
shape = SubResource( 2 )

[node name="MoonPath" type="Path2D" parent="PlanetPath1/Planet"]
curve = SubResource( 3 )

[node name="Moon" type="PathFollow2D" parent="PlanetPath1/Planet/MoonPath"]
position = Vector2( -211.869, -11.8806 )
rotation = -1.5701

[node name="Camera2D" type="Camera2D" parent="PlanetPath1/Planet"]
zoom = Vector2( 4, 4 )

[node name="PlanetPath2" type="Path2D" parent="."]
position = Vector2( -4032, -1500 )
scale = Vector2( 5, 5 )
curve = SubResource( 4 )
script = ExtResource( 7 )

[node name="Planet" type="PathFollow2D" parent="PlanetPath2"]
position = Vector2( -317.77, -293.754 )
rotation = -0.517097
offset = 5020.13
script = ExtResource( 9 )

[node name="PlanetImg" type="Sprite" parent="PlanetPath2/Planet"]
rotation = 2.18166
texture = ExtResource( 2 )

[node name="PlanetSensor" type="Area2D" parent="PlanetPath2/Planet"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlanetPath2/Planet/PlanetSensor"]
rotation = -1.0472
shape = SubResource( 5 )

[node name="MoonPath" type="Path2D" parent="PlanetPath2/Planet"]
curve = SubResource( 6 )

[node name="Moon" type="PathFollow2D" parent="PlanetPath2/Planet/MoonPath"]
position = Vector2( 124.266, -181.996 )
rotation = 0.535335

[node name="Camera2D" type="Camera2D" parent="PlanetPath2/Planet"]
rotation = 0.517097
zoom = Vector2( 4, 4 )

[node name="PlanetPath3" type="Path2D" parent="."]
position = Vector2( -3400, 0 )
scale = Vector2( 5, 5 )
curve = SubResource( 7 )
script = ExtResource( 7 )

[node name="Planet" type="PathFollow2D" parent="PlanetPath3"]
position = Vector2( 759.934, 1042.77 )
rotation = 2.4068
offset = 1894.6
script = ExtResource( 9 )

[node name="PlanetImg" type="Sprite" parent="PlanetPath3/Planet"]
rotation = -2.18166
texture = ExtResource( 3 )

[node name="PlanetSensor" type="Area2D" parent="PlanetPath3/Planet"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlanetPath3/Planet/PlanetSensor"]
rotation = -0.820305
shape = SubResource( 8 )

[node name="MoonPath" type="Path2D" parent="PlanetPath3/Planet"]
curve = SubResource( 9 )

[node name="Moon" type="PathFollow2D" parent="PlanetPath3/Planet/MoonPath"]
position = Vector2( -152.506, 160.764 )
rotation = -2.34589

[node name="Camera2D" type="Camera2D" parent="PlanetPath3/Planet"]
rotation = -2.40399
zoom = Vector2( 4, 4 )
